[tool.poetry]
name = "rag-chat"
version = "0.1.0"
description = ""
authors = ["Andrew Ho <andyminhtuanho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
langchain = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
