[tool.poetry]
name = "rag-chat"
version = "0.1.0"
description = ""
authors = ["Andrew Ho <andyminhtuanho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
httpx = "^0.27.0"
langchain = "^0.2.0"
langchain-community = "^0.2.0"
unstructured = {extras = ["md"], version = "^0.14.0"}
openai = "^1.30.1"
chromadb = "^0.5.0"
tiktoken = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
